# WeatherProj1

./: .gitignore  README.md  forecast.py  helper_functions.py  main.py  plots_tests.py  pyproject.toml  requirements.txt  streamlitmain.py  weather.py  worldmap_test.py
junk_scripts/: historical_data.py  testtest.py  weather_historical_data.py  worldmap_test.py
