[tool.poetry]
name = "weatherproj1"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"
streamlit = "^1.41.1"
geopy = "^2.4.1"
streamlit-folium = "^0.24.0"
pytz = "^2024.2"
seaborn = "^0.13.2"
timezonefinder = "^6.5.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
